--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# DPLP submodule
+/DPLP
+
+# vscode
+.vscode/
+
+# data folder
+data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
